náhledový obrázek fix

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Santos Sheriff's Department - LSSD</title>
-    <meta name="description" content="Official website of the Los Santos Sheriff's Department. Serving and protecting our community with integrity, professionalism, and dedication since 1872." />
+    <meta name="description" content="Oficiální webové stránky Los Santos Sheriff Department. Sloužíme naší komunitě a chráníme ji s integritou, profesionalitou a odhodláním od roku 1872." />
     <meta name="author" content="Los Santos Sheriff's Department" />
 
     <meta property="og:title" content="Los Santos Sheriff's Department - LSSD" />
-    <meta property="og:description" content="Official website of the Los Santos Sheriff's Department. Serving and protecting our community with integrity, professionalism, and dedication since 1872." />
+    <meta property="og:description" content="Oficiální webové stránky Los Santos Sheriff's Department. Sloužíme naší komunitě a chráníme ji s integritou, profesionalitou a odhodláním od roku 1872." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://lssdcmrp.cz/assets/sbor-CyoAzSD9.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="https://lssdcmrp.cz/assets/sbor-CyoAzSD9.png" />
   </head>
 
   <body>
